Deuda en swagger
