# api/openapi.yml
@@ -264,6 +264,109 @@ paths:
       tags:
         - Cotizaciones
 
+  /api/data/deudaRut:
+    get:
+      description: Obtiene las deudas asociadas a un RUT
+      x-eov-operation-handler: deuda
+      operationId: obtenerDeudaRut
+      parameters:
+        - in: query
+          name: rut
+          schema:
+            type: string
+          required: true
+          description: RUT del cliente para buscar deudas
+      responses:
+        "200":
+          description: Deuda encontrada
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/DeudaCliente"
+        "404":
+          description: Deuda no encontrada
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorGenerico"
+        "500":
+          description: Error interno
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorGenerico"
+      tags:
+        - Deuda
+
+  /api/data/crearDeuda:
+    post:
+      description: Crea o actualiza las deudas de un cliente por rut
+      x-eov-operation-handler: deuda
+      operationId: crearDeuda
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/DeudaCliente'
+      responses:
+        "201":
+          description: Deuda guardada correctamente
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  ok:
+                    type: boolean
+                    example: true
+                  msg:
+                    type: string
+                    example: Datos deuda guardados correctamente
+        "400":
+          description: Solicitud incorrecta
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorGenerico'
+        "500":
+          description: Error interno del servidor
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorGenerico'
+      tags:
+        - Deuda
+
+  /api/data/obtenerDeudas:
+    get:
+      description: Obtiene todas las deudas de todos los clientes
+      x-eov-operation-handler: deuda
+      operationId: obtenerDeuda
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  ok:
+                    type: boolean
+                    example: true
+                  deuda:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/DeudaCliente'
+        "500":
+          description: Error interno del servidor
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorGenerico'
+      tags:
+        - Deuda
+
 
     
 components:
@@ -377,6 +480,38 @@ components:
               afp:
                 type: string
                 example: "HABITAD"
+
+    Deuda:
+      type: object
+      required:
+        - nombreInstitucion
+        - monto
+        - fecha
+      properties:
+        nombreInstitucion:
+          type: string
+          example: "Banco Estado"
+        monto:
+          type: string
+          example: "1000000"
+        fecha:
+          type: string
+          format: date
+          example: "2024-05-01"
+
+    DeudaCliente:
+      type: object
+      required:
+        - rut
+        - deuda
+      properties:
+        rut:
+          type: string
+          example: "123456789"
+        deuda:
+          type: array
+          items:
+            $ref: "#/components/schemas/Deuda"
 
 
     ErrorGenerico:
